Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- LDAPBackingDirectory: added explicit filter for LDAP entries.
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- ZMI search uses unrestricted search method.